# uk-crime-vala

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml
src/: api-client.vala  app.vala  meson.build  model.vala
